--- a/style.scss
+++ b/style.scss
@@ -120,7 +120,7 @@ header {
             background: #161245;
             box-shadow: 0px 4px 20px rgba(3, 16, 52, 0.5);
             border-radius: 25px;
-            background-image: url("/public/icons/search.svg");
+            background-image: url("./public/icons/search.svg");
             background-position: 97% 50%;
             background-repeat: no-repeat;
             background-size: 24px 24px;
@@ -154,13 +154,13 @@ header {
             }
 
             .mail {
-                background-image: url("/public/icons/mail.svg");
+                background-image: url("./public/icons/mail.svg");
                 background-size: contain;
                 background-position: 50% 50%;
             }
 
             .bell {
-                background-image: url("/public/icons/bell.svg");
+                background-image: url("./public/icons/bell.svg");
             }
 
             .btn_after::after {
@@ -242,7 +242,7 @@ aside {
 
         background-repeat: no-repeat;
         background-position: 16px 50%;
-        background-image: url("/public/icons/oveview.svg");
+        background-image: url("./public/icons/oveview.svg");
     }
 
     .aside_out {
@@ -287,7 +287,7 @@ aside {
             transition: .4s linear;
         }
 
-        background-image: url("/public/icons/oveview.svg");
+        background-image: url("./public/icons/oveview.svg");
         background-repeat: no-repeat;
         background-position: 16px 50%;
         transition: .4s linear;
